rework main args parsing to make testing easier

--- a/tools/nomad-generate/structs.copy.tmpl
+++ b/tools/nomad-generate/structs.copy.tmpl
@@ -5,6 +5,7 @@ import (
 )
 
 {{ range $targetType := .Targets -}}
+{{ if $targetType.IsCopy -}}
 {{ $old := $targetType.Abbr }}
 func ({{$old}} *{{$targetType.Name}}) Copy() *{{$targetType.Name}} {
 
@@ -73,4 +74,5 @@ func ({{$old}} *{{$targetType.Name}}) Copy() *{{$targetType.Name}} {
 {{- end }}
 	return xx
 }
+{{- end}}
 {{- end}}
